Clase07/azure/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2-pod
          image: cursodocker03.azurecr.io/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
