Clase07/azure/backend1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend1-svc
spec:
  type: NodePort
  selector:
    app: backend1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
